--- a/style/header.css
+++ b/style/header.css
@@ -40,6 +40,9 @@
     line-height: 100%;
     letter-spacing: 2px;
   }
+  header #line nav ul li img {
+    display: none;
+  }
 }
 @media (min-width: 1024px) and (max-width: 1919px) {
   header {
@@ -55,12 +58,62 @@
   header #line nav {
     background: black;
   }
-  header #line nav .menu-button {
+  header #line nav .menu-button svg {
+    transition: all 1s ease-in-out;
+  }
+  .menu-closed .menu-button {
     width: 32px;
     height: 18px;
   }
-  header #line nav ul {
+  .menu-closed .menu-button .pancake {
+    display: block;
+  }
+  .menu-closed .menu-button .cross {
     display: none;
+  }
+  .menu-closed ul {
+    display: none;
+  }
+  .menu-opened .menu-button {
+    width: 25px;
+    height: 25px;
+  }
+  .menu-opened .menu-button .cross {
+    display: block;
+  }
+  .menu-opened .menu-button .pancake {
+    display: none;
+  }
+  .menu-opened nav {
+    position: relative;
+  }
+  .menu-opened nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    width: 130px;
+    height: 263px;
+    top: 105px;
+    left: -905px;
+    z-index: 100;
+  }
+  .menu-opened nav ul li {
+    display: flex;
+    justify-content: space-between;
+  }
+  .menu-opened nav ul li .section {
+    width: 102px;
+    text-align: left;
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 2px;
+  }
+  .menu-opened nav ul li img {
+    width: 12px;
+    height: 12px;
   }
 }
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -82,7 +135,19 @@
     width: 32px;
     height: 18px;
   }
-  header #line nav ul {
+  .menu-closed header .pancake {
+    display: block;
+  }
+  .menu-closed header .cross {
+    display: none;
+  }
+  .menu-closed header ul {
+    display: none;
+  }
+  .menu-opened header .cross {
+    display: block;
+  }
+  .menu-opened header .pancake {
     display: none;
   }
 }
@@ -111,6 +176,18 @@
     height: 18px;
   }
   header #line nav ul {
+    display: none;
+  }
+  .menu-closed .pancake {
+    display: block;
+  }
+  .menu-closed .cross {
+    display: none;
+  }
+  .menu-opened .cross {
+    display: block;
+  }
+  .menu-opened .pancake {
     display: none;
   }
 }
