--- a/style/header.scss
+++ b/style/header.scss
@@ -38,6 +38,9 @@
                             line-height: 100%;
                             letter-spacing: 2px;
                         }
+                        img {
+                            display: none;
+                        }
                     }
                 }
             }
@@ -59,11 +62,69 @@
             nav {
                 background: black;
                 .menu-button {
-                    width: 32px;
-                    height: 18px;
+                    svg {
+                        transition: all 1s ease-in-out;
+                    }
                 }
-                ul {
-                    display: none;
+            }
+        }
+    }
+
+    .menu-closed {
+        .menu-button {
+            width: 32px;
+            height: 18px;
+            .pancake {
+                display: block;
+            }
+            .cross {
+                display: none;
+            }
+        }
+        ul {
+            display: none;
+        }
+    }
+
+    .menu-opened {
+        .menu-button {
+            width: 25px;
+            height: 25px;
+            .cross {
+                display: block;
+            }
+            .pancake {
+                display: none;
+            }
+        }
+        nav {
+            position: relative;
+            ul {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                position: absolute;
+                width: 130px;
+                height: 263px;
+                top: 105px;
+                left: -905px;
+                z-index: 100;
+                li {
+                    display: flex;
+                    justify-content: space-between;
+                    .section {
+                        width: 102px;
+                        text-align: left;
+                        font-family: Roboto, sans-serif;
+                        font-weight: 300;
+                        font-size: 20px;
+                        line-height: 100%;
+                        letter-spacing: 2px;
+                    }
+                    img {
+                        width: 12px;
+                        height: 12px;
+                    }
                 }
             }
         }
@@ -91,10 +152,34 @@
                     width: 32px;
                     height: 18px;
                 }
-                ul {
-                    display: none;
-                }
             }
+        }
+    }
+
+    .menu-closed {
+        header {
+            .pancake {
+                display: block;
+            }
+            .cross {
+                display: none;
+            }
+            ul {
+                display: none;
+            }
+        }
+    }
+    .menu-opened {
+        header {
+            .cross {
+                display: block;
+            }
+            .pancake {
+                display: none;
+            }
+            ul {
+            }
+
         }
     }
 }
@@ -128,6 +213,23 @@
                     display: none;
                 }
             }
+        }
+    }
+
+    .menu-closed {
+        .pancake {
+            display: block;
+        }
+        .cross {
+            display: none;
+        }
+    }
+    .menu-opened {
+        .cross {
+            display: block;
+        }
+        .pancake {
+            display: none;
         }
     }
 }
