--- a/style/visiting.scss
+++ b/style/visiting.scss
@@ -31,6 +31,12 @@
             margin-top: 10px;
             width: 300px;
           }
+          .panorama-bar-non-hover {
+            width: 300px;
+          }
+          .panorama-bar-hover {
+            width: 440px;
+          }
           p {
             margin-top: 10px;
           }
@@ -51,10 +57,8 @@
     padding: 60px 0 0 0;
     .content {
       height: 1373px;
-      border: 2px solid red;
       .panorama-container {
         padding: 60px 108px;
-        border: 1px solid red;
         height: 1275px;
         width: 100%;
         display: grid;
@@ -65,7 +69,6 @@
         justify-content: space-between;
         justify-items: center;
         .panorama {
-          border: 1px solid red;
           width: 330px;
           height: 345px;
           img {
@@ -80,6 +83,12 @@
           }
           .panorama-bar {
             margin-top: 9px;
+          }
+          .panorama-bar-non-hover {
+            width: 150px;
+          }
+          .panorama-bar-hover {
+            width: 330px;
           }
           p.top {
             height: 23px;
@@ -130,8 +139,11 @@
             height: 2px;
             margin: 10px 0;
           }
-          .bar-non-hover {
+          .panorama-bar-non-hover {
             width: 150px;
+          }
+          .panorama-bar-hover {
+            width: 280px;
           }
           p.top {
             height: 21px;
@@ -172,6 +184,13 @@
           }
           .panorama-bar {
             margin: 10px 0;
+            transition: all 0.5s ease;
+          }
+          .panorama-bar-non-hover {
+            width: 150px;
+          }
+          .panorama-bar-hover {
+            width: 280px;
           }
           p {
             font-size: 16px;
