--- a/style/welcome.css
+++ b/style/welcome.css
@@ -163,16 +163,7 @@
   #welcome .content .joconda-holder {
     position: relative;
   }
-  #welcome .content .joconda-shadow {
-    position: absolute;
-    background: linear-gradient(to right, rgb(0, 0, 0), transparent);
-    z-index: 1;
-    top: 0;
-    left: 304px;
-    height: 525px;
-    width: 250px;
-  }
-  #welcome .content img {
+  #welcome .content .joconda-holder img {
     z-index: 0;
     top: 0;
     right: 0;
@@ -181,6 +172,15 @@
     height: 525px;
     width: 700px;
     left: 304px;
+  }
+  #welcome .content .joconda-shadow {
+    position: absolute;
+    background: linear-gradient(to right, rgb(0, 0, 0), transparent);
+    z-index: 1;
+    top: 0;
+    left: 304px;
+    height: 525px;
+    width: 250px;
   }
   #welcome .content .welcome-slider-io {
     border: 2px solid red;
@@ -193,8 +193,6 @@
   #welcome .content .welcome-slider-io .welcome-slider-io-metadata {
     width: 71px;
     height: 40px;
-    top: 505px;
-    left: 528px;
     font-family: Roboto, sans-serif;
     font-weight: 400;
     font-size: 20px;
@@ -208,6 +206,34 @@
     height: 22px;
     width: 2px;
     background-color: white;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-pointer {
+    width: 160px;
+    height: 12px;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-pointer .welcome-slider-io-point {
+    width: 12px;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-swiper {
+    width: 80px;
+    height: 8px;
+    transform: translateY(-7px);
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-right-arrow, #welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-left-arrow {
+    position: relative;
+    width: 30px;
+    height: 100%;
+    object-fit: cover;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-right-arrow img, #welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-left-arrow img {
+    width: 100%;
+    height: 100%;
+  }
+  .menu-opened .text-content {
+    display: none;
+  }
+  .menu-closed .text-content {
+    display: block;
   }
 }
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -438,6 +464,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  align-content: center;
   bottom: 0;
   right: 0;
   z-index: 100;
@@ -455,6 +482,7 @@
 #welcome .content .welcome-slider-io .welcome-slider-io-pointer {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 #welcome .content .welcome-slider-io .welcome-slider-io-pointer .welcome-slider-io-point {
   height: 100%;
@@ -468,6 +496,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  align-content: center;
 }
 #welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-left-arrow img {
   transform: scaleX(-1);
