feat: try to check optimization

--- a/style/explore.css
+++ b/style/explore.css
@@ -6,7 +6,6 @@
     align-items: center;
   }
   #explore .content {
-    border: 2px solid red;
     height: 715px;
     display: grid;
     grid-template-columns: 660px 720px;
@@ -35,7 +34,6 @@
   #explore .content .meninas-content {
     position: relative;
     top: 15px;
-    border: 2px solid red;
   }
   #explore .content .meninas-content .meninas-cleaned-container {
     position: absolute;
@@ -94,6 +92,7 @@
     line-height: 38.5px;
   }
   #explore .content .text-content .first {
+    margin-top: 60px;
     height: 39px;
   }
   #explore .content .text-content .second {
