--- a/style/footer.css
+++ b/style/footer.css
@@ -29,9 +29,15 @@
     top: 87px;
     left: 340px;
   }
-  footer .content nav li {
+  footer .content nav ul {
+    display: grid;
+    grid-template-rows: repeat(3, 26px);
+    grid-template-columns: repeat(2, 106px);
+    row-gap: 25px;
+    column-gap: 170px;
+  }
+  footer .content nav ul li {
     font-size: 22px;
-    letter-spacing: 2px;
   }
   footer .content .social {
     width: 340px;
@@ -83,9 +89,15 @@
     top: 65px;
     left: 239px;
   }
+  footer .content nav ul {
+    display: grid;
+    grid-template-rows: repeat(3, 26px);
+    grid-template-columns: repeat(2, 106px);
+    row-gap: 25px;
+    column-gap: 100px;
+  }
   footer .content nav ul li a {
     font-size: 22px;
-    letter-spacing: 2px;
   }
   footer .content .social {
     width: 340px;
@@ -130,12 +142,17 @@
     top: 57px;
     left: 279px;
   }
+  footer .content nav ul {
+    display: grid;
+    grid-template-rows: repeat(3, 21px);
+    grid-template-columns: repeat(2, 85px);
+    row-gap: 25px;
+    column-gap: 203px;
+  }
   footer .content nav ul li a {
     font-size: 18px;
-    letter-spacing: 2px;
   }
   footer .content .social {
-    border: 2px solid red;
     width: 340px;
     height: 48px;
     top: 220px;
@@ -151,108 +168,6 @@
     top: 309px;
   }
 }
-footer {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-footer .content {
-  position: relative;
-  height: 100%;
-}
-footer .content .logo {
-  position: absolute;
-}
-footer .content .logo h3 {
-  display: inline-block;
-  font-family: Forum, serif;
-  font-weight: 400;
-  text-transform: uppercase;
-  color: white;
-  line-height: 100%;
-  letter-spacing: 5px;
-}
-footer .content nav {
-  position: absolute;
-}
-footer .content nav ul {
-  height: 100%;
-  width: 100%;
-  display: grid;
-  justify-content: space-between;
-  align-content: space-between;
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: repeat(2, 1fr);
-  list-style: none;
-}
-footer .content nav ul li a {
-  font-family: Roboto, sans-serif;
-  font-weight: 200;
-  line-height: 100%;
-  color: white;
-  text-decoration: none;
-  transition: color 0.35s ease;
-}
-footer .content nav ul li a:hover {
-  color: rgb(157, 134, 101);
-}
-footer .content .social {
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-}
-footer .content .social a {
-  width: 48px;
-  height: 48px;
-  display: flex;
-  justify-content: space-evenly;
-  align-content: space-evenly;
-  align-items: center;
-  border: 1px solid rgb(102, 102, 102);
-  border-radius: 50%;
-  transition: all ease 0.4s;
-}
-footer .content .social a svg {
-  transition: all ease 0.4s;
-  fill: white;
-  width: 24px;
-  height: 24px;
-}
-footer .content .social .youtube-socials svg {
-  fill: red;
-}
-footer .content .social a:hover {
-  border-color: rgb(157, 134, 101);
-}
-footer .content .social svg:hover {
-  fill: rgb(157, 134, 101);
-}
-footer .content .bar {
-  height: 3px;
-  position: absolute;
-  background-color: rgb(102, 102, 102);
-}
-footer .content .bottom {
-  position: absolute;
-  width: 100%;
-}
-footer .content .bottom ul {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-}
-footer .content .bottom ul li {
-  font-family: Roboto, sans-serif;
-  font-weight: 200;
-  font-size: 22px;
-  line-height: 22px;
-  letter-spacing: 2px;
-  color: white;
-}
-
 @media (min-width: 420px) and (max-width: 767px) {
   footer {
     height: 400px;
@@ -336,9 +251,105 @@ footer .content .bottom ul li {
     line-height: 22px;
     letter-spacing: 2px;
   }
-  footer .content .bottom ul li:last-child {
+  footer .content .bottom ul .rs-mention {
     display: none;
   }
+}
+footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+footer .content {
+  position: relative;
+  height: 100%;
+}
+footer .content .logo {
+  position: absolute;
+}
+footer .content .logo h3 {
+  display: inline-block;
+  font-family: Forum, serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: white;
+  line-height: 100%;
+  letter-spacing: 5px;
+}
+footer .content nav {
+  position: absolute;
+}
+footer .content nav ul {
+  height: 100%;
+  width: 100%;
+  list-style: none;
+}
+footer .content nav ul li a {
+  letter-spacing: 2px;
+  line-height: 100%;
+  font-family: Roboto, sans-serif;
+  font-weight: 200;
+  color: white;
+  text-decoration: none;
+  transition: color 0.35s ease;
+}
+footer .content nav ul li a:hover {
+  color: rgb(157, 134, 101);
+}
+footer .content .social {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+}
+footer .content .social a {
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: space-evenly;
+  align-content: space-evenly;
+  align-items: center;
+  border: 1px solid rgb(102, 102, 102);
+  border-radius: 50%;
+  transition: border ease 0.4s;
+}
+footer .content .social a svg {
+  width: 24px;
+  height: 24px;
+}
+footer .content .social a svg path {
+  fill: white;
+  transition: fill ease 0.4s;
+}
+footer .content .social a:hover {
+  border-color: rgb(157, 134, 101);
+}
+footer .content .social a:hover svg path {
+  fill: rgb(157, 134, 101);
+}
+footer .content .bar {
+  height: 3px;
+  position: absolute;
+  background-color: rgb(102, 102, 102);
+}
+footer .content .bottom {
+  position: absolute;
+  width: 100%;
+}
+footer .content .bottom ul {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+footer .content .bottom ul li {
+  font-family: Roboto, sans-serif;
+  font-weight: 200;
+  font-size: 22px;
+  line-height: 22px;
+  letter-spacing: 2px;
+  color: white;
 }
 
 /*# sourceMappingURL=footer.css.map */
