--- a/style/header.css
+++ b/style/header.css
@@ -33,6 +33,7 @@
     justify-content: space-between;
   }
   header #line nav ul li a {
+    justify-content: center;
     text-decoration: none;
     font-family: Roboto, serif;
     font-weight: 200;
@@ -94,15 +95,19 @@
     position: absolute;
     width: 130px;
     height: 263px;
-    top: 105px;
-    left: -905px;
+    top: 120px;
+    left: -935px;
     z-index: 100;
   }
   .menu-opened nav ul li {
+    width: 122px;
+  }
+  .menu-opened nav ul li a {
     display: flex;
     justify-content: space-between;
   }
-  .menu-opened nav ul li .section {
+  .menu-opened nav ul li a .section {
+    display: block;
     width: 102px;
     text-align: left;
     font-family: Roboto, sans-serif;
@@ -111,7 +116,8 @@
     line-height: 100%;
     letter-spacing: 2px;
   }
-  .menu-opened nav ul li img {
+  .menu-opened nav ul li a img {
+    display: block;
     width: 12px;
     height: 12px;
   }
@@ -229,7 +235,6 @@ header #line nav ul li {
 header #line nav ul li a {
   display: flex;
   align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100%;
   color: white;
