--- a/style/header.scss
+++ b/style/header.scss
@@ -31,6 +31,7 @@
 
                     li {
                         a {
+                            justify-content: center;
                             text-decoration: none;
                             font-family: Roboto, serif;
                             font-weight: 200;
@@ -106,24 +107,29 @@
                 position: absolute;
                 width: 130px;
                 height: 263px;
-                top: 105px;
-                left: -905px;
+                top: 120px;
+                left: -935px;
                 z-index: 100;
                 li {
-                    display: flex;
-                    justify-content: space-between;
-                    .section {
-                        width: 102px;
-                        text-align: left;
-                        font-family: Roboto, sans-serif;
-                        font-weight: 300;
-                        font-size: 20px;
-                        line-height: 100%;
-                        letter-spacing: 2px;
-                    }
-                    img {
-                        width: 12px;
-                        height: 12px;
+                    width: 122px;
+                    a {
+                        display: flex;
+                        justify-content: space-between;
+                        .section {
+                            display: block;
+                            width: 102px;
+                            text-align: left;
+                            font-family: Roboto, sans-serif;
+                            font-weight: 300;
+                            font-size: 20px;
+                            line-height: 100%;
+                            letter-spacing: 2px;
+                        }
+                        img {
+                            display: block;
+                            width: 12px;
+                            height: 12px;
+                        }
                     }
                 }
             }
@@ -273,7 +279,6 @@ header {
                     a {
                         display: flex;
                         align-items: center;
-                        justify-content: center;
                         width: 100%;
                         height: 100%;
                         color: white;
