--- a/style/common.css
+++ b/style/common.css
@@ -16,38 +16,45 @@ body {
 
 @font-face {
   font-family: "Forum";
-  src: url("../font/Forum-Regular.ttf") format("truetype");
-  font-style: normal;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("../font/Roboto-ExtraLight.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 200;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("../font/Roboto-Light.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 300;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("../font/Roboto-Regular.ttf") format("truetype");
-  font-style: normal;
+  src: url("../font/Forum.woff2") format("woff2");
   font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Roboto";
-  src: url("../font/Roboto-Medium.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 500;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("../font/Roboto-Bold.ttf") format("truetype");
-  font-style: normal;
+  src: url("../font/Roboto-Bold.woff2") format("woff2");
   font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url("../font/Roboto-ExtraLight.woff2") format("woff2");
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url("../font/Roboto-Light.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url("../font/Roboto-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url("../font/Roboto-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 main section {
   width: 100%;
