--- a/style/common.scss
+++ b/style/common.scss
@@ -16,45 +16,51 @@ body {
 
 @font-face {
   font-family: 'Forum';
-  src: url('../font/Forum-Regular.ttf') format('truetype');
+  src: url('../font/Forum.woff2') format('woff2');
+  font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('../font/Roboto-ExtraLight.ttf') format('truetype');
-  font-style: normal;
-  font-weight: 200; // Extra Light (Ultra Light)
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src: url('../font/Roboto-Light.ttf') format('truetype');
-  font-style: normal;
-  font-weight: 300; // Light
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src: url('../font/Roboto-Regular.ttf') format('truetype');
-  font-style: normal;
-  font-weight: 400; // Normal
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src: url('../font/Roboto-Medium.ttf') format('truetype');
-  font-style: normal;
-  font-weight: 500; // Medium
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src: url('../font/Roboto-Bold.ttf') format('truetype');
-  font-style: normal;
+  src: url('../font/Roboto-Bold.woff2') format('woff2');
   font-weight: 700; // Bold
+  font-style: normal;
+  font-display: swap;
 }
 
+@font-face {
+  font-family: 'Roboto';
+  src: url('../font/Roboto-ExtraLight.woff2') format('woff2');
+  font-weight: 200; // Extra Light (Ultra Light)
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../font/Roboto-Light.woff2') format('woff2');
+  font-weight: 300; // Light
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../font/Roboto-Medium.woff2') format('woff2');
+  font-weight: 500; // Medium
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../font/Roboto-Regular.woff2') format('woff2');
+  font-weight: 400; // Normal
+  font-style: normal;
+  font-display: swap;
+}
 
 main {
   section {
