--- a/style/gallery.scss
+++ b/style/gallery.scss
@@ -11,9 +11,6 @@
             padding-bottom: 24px;
           }
         }
-        .central {
-          transform: translateY(-50px);
-        }
         .gallery-fogging {
           height: 360px;
         }
@@ -95,7 +92,7 @@
         }
       }
     }
-    .central {
+    .upper {
       transform: translateY(-50px);
     }
     .gallery-fogging {
