--- a/style/header.css
+++ b/style/header.css
@@ -62,33 +62,33 @@
   header #line nav .menu-button svg {
     transition: all 1s ease-in-out;
   }
-  .menu-closed .menu-button {
+  .menu-closed-header .menu-button {
     width: 32px;
     height: 18px;
   }
-  .menu-closed .menu-button .pancake {
+  .menu-closed-header .menu-button .pancake {
     display: block;
   }
-  .menu-closed .menu-button .cross {
+  .menu-closed-header .menu-button .cross {
     display: none;
   }
-  .menu-closed ul {
+  .menu-closed-header ul {
     display: none;
   }
-  .menu-opened .menu-button {
+  .menu-opened-header .menu-button {
     width: 25px;
     height: 25px;
   }
-  .menu-opened .menu-button .cross {
+  .menu-opened-header .menu-button .cross {
     display: block;
   }
-  .menu-opened .menu-button .pancake {
+  .menu-opened-header .menu-button .pancake {
     display: none;
   }
-  .menu-opened nav {
+  .menu-opened-header nav {
     position: relative;
   }
-  .menu-opened nav ul {
+  .menu-opened-header nav ul {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -99,14 +99,14 @@
     left: -935px;
     z-index: 100;
   }
-  .menu-opened nav ul li {
+  .menu-opened-header nav ul li {
     width: 122px;
   }
-  .menu-opened nav ul li a {
+  .menu-opened-header nav ul li a {
     display: flex;
     justify-content: space-between;
   }
-  .menu-opened nav ul li a .section {
+  .menu-opened-header nav ul li a .section {
     display: block;
     width: 102px;
     text-align: left;
@@ -116,7 +116,7 @@
     line-height: 100%;
     letter-spacing: 2px;
   }
-  .menu-opened nav ul li a img {
+  .menu-opened-header nav ul li a img {
     display: block;
     width: 12px;
     height: 12px;
@@ -141,20 +141,56 @@
     width: 32px;
     height: 18px;
   }
-  .menu-closed header .pancake {
+  .menu-closed-header .pancake {
     display: block;
   }
-  .menu-closed header .cross {
+  .menu-closed-header .cross {
     display: none;
   }
-  .menu-closed header ul {
+  .menu-closed-header ul {
     display: none;
   }
-  .menu-opened header .cross {
+  .menu-opened-header .cross {
     display: block;
   }
-  .menu-opened header .pancake {
+  .menu-opened-header .pancake {
     display: none;
+  }
+  .menu-opened-header nav {
+    position: relative;
+  }
+  .menu-opened-header nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    width: 122px;
+    height: 263px;
+    top: 105px;
+    left: -662px;
+    z-index: 10;
+  }
+  .menu-opened-header nav ul li {
+    width: 122px;
+  }
+  .menu-opened-header nav ul li a {
+    display: flex;
+    justify-content: space-between;
+  }
+  .menu-opened-header nav ul li a .section {
+    display: block;
+    width: 102px;
+    text-align: left;
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 2px;
+  }
+  .menu-opened-header nav ul li a img {
+    display: block;
+    width: 12px;
+    height: 12px;
   }
 }
 @media (min-width: 420px) and (max-width: 767px) {
@@ -163,7 +199,6 @@
   }
   header #line {
     width: 380px;
-    border: 2px solid red;
   }
   header #line .logo {
     width: 131px;
@@ -184,17 +219,48 @@
   header #line nav ul {
     display: none;
   }
-  .menu-closed .pancake {
+  .menu-closed-header .pancake {
     display: block;
   }
-  .menu-closed .cross {
+  .menu-closed-header .cross {
     display: none;
   }
-  .menu-opened .cross {
+  .menu-opened-header .cross {
     display: block;
   }
-  .menu-opened .pancake {
+  .menu-opened-header .pancake {
     display: none;
+  }
+  .menu-opened-header nav {
+    position: relative;
+  }
+  .menu-opened-header nav ul {
+    display: flex !important;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    width: 122px;
+    height: 263px;
+    top: 75px;
+    left: -313px;
+    z-index: 10;
+  }
+  .menu-opened-header nav ul li {
+    width: 100%;
+  }
+  .menu-opened-header nav ul li a {
+    display: flex;
+    justify-content: space-between;
+  }
+  .menu-opened-header nav ul li a .section {
+    display: block;
+    width: 102px;
+    text-align: left;
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 2px;
   }
 }
 header {
@@ -228,6 +294,12 @@ header #line .logo h3 {
 header #line nav .menu-button svg {
   background-color: black;
 }
+header #line nav .menu-button rect {
+  transition: 0.3s ease fill;
+}
+header #line nav .menu-button:hover rect {
+  fill: rgb(157, 134, 101);
+}
 header #line nav ul li {
   height: 100%;
   width: 100%;
@@ -241,8 +313,19 @@ header #line nav ul li a {
   text-decoration: none;
   transition: color 0.4s ease;
 }
+header #line nav ul li a svg {
+  display: block;
+  width: 12px;
+  height: 12px;
+}
+header #line nav ul li a svg path {
+  transition: 0.4s ease fill;
+}
 header #line nav ul li a:hover {
   color: rgb(157, 134, 101);
+}
+header #line nav ul li a:hover svg path {
+  fill: rgb(157, 134, 101);
 }
 header #line nav ul li a:active {
   color: rgb(126, 108, 81);
