--- a/style/gallery.css
+++ b/style/gallery.css
@@ -14,9 +14,6 @@
   #gallery .content .container .column .picture {
     padding-bottom: 24px;
   }
-  #gallery .content .container .central {
-    transform: translateY(-50px);
-  }
   #gallery .content .container .gallery-fogging {
     height: 360px;
   }
@@ -77,7 +74,7 @@
   width: 100%;
   height: 100%;
 }
-#gallery .container .central {
+#gallery .container .upper {
   transform: translateY(-50px);
 }
 #gallery .container .gallery-fogging {
