--- a/style/welcome.scss
+++ b/style/welcome.scss
@@ -63,6 +63,10 @@
         width: 1000px;
       }
       .welcome-slider-io {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        align-content: center;
         width: 600px;
         height: 120px;
         position: absolute;
@@ -113,6 +117,9 @@
             }
           }
         }
+      }
+      .main-menu-panorama {
+        display: none;
       }
     }
   }
@@ -186,6 +193,10 @@
         width: 250px;
       }
       .welcome-slider-io {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        align-content: center;
         width: 700px;
         height: 120px;
         position: absolute;
@@ -231,15 +242,19 @@
           }
         }
       }
+      .main-menu-panorama {
+        display: none;
+      }
     }
   }
 
-  .menu-opened {
+  .menu-opened-welcome {
     .text-content {
       display: none;
     }
   }
-  .menu-closed {
+
+  .menu-closed-welcome {
     .text-content {
       display: block;
     }
@@ -323,6 +338,51 @@
       }
     }
   }
+
+  .menu-opened-welcome {
+    .text-content {
+      display: none !important;
+    }
+    .joconda-holder {
+      display: none;
+    }
+    .welcome-slider-io {
+      display: none !important;
+    }
+    .main-menu-panorama {
+      display: flex;
+      justify-content: space-between;
+      align-content: space-between;
+      flex-wrap: wrap;
+      position: absolute;
+      top: 333px;
+      width: 658px;
+      height: 376px;
+      .sunset-holder {
+        width: 100%;
+        height: 194px;
+      }
+      .hall-holder, .view-holder {
+        width: 319px;
+        height: 161px;
+      }
+    }
+  }
+
+  .menu-closed-welcome {
+    .text-content {
+      display: flex;
+    }
+    .joconda-holder {
+      display: block;
+    }
+    .welcome-slider-io {
+      display: flex;
+    }
+    .main-menu-panorama {
+      display: none;
+    }
+  }
 }
 
 @media (min-width: 420px) and (max-width: 767px) {
@@ -386,7 +446,6 @@
         align-content: center;
         width: 230px;
         height: 40px;
-        border: 2px solid red;
         transform: translateY(-20px);
         .welcome-slider-io-metadata {
           display: flex;
@@ -427,6 +486,41 @@
               height: 100%;
             }
           }
+        }
+      }
+      .main-menu-panorama {
+        display: none;
+      }
+    }
+  }
+
+
+  .menu-opened-welcome {
+    .text-content {
+      display: none !important;
+    }
+    .joconda-holder {
+      display: none;
+    }
+    .welcome-slider-io {
+      display: none !important;
+    }
+    .main-menu-panorama {
+      display: flex !important;
+      justify-content: space-between;
+      position: absolute;
+      top: 333px;
+      height: 95px;
+      width: 310px;
+      left: 35px;
+      .sunset-holder, .hall-holder, .view-holder {
+        object-fit: cover;
+        width: 95px;
+        height: 100%;
+        img {
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
         }
       }
     }
@@ -479,10 +573,6 @@
       }
     }
     .welcome-slider-io {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      align-content: center;
       bottom: 0;
       right: 0;
       z-index: 3;
